# viUtility

./: README.md
text-file-collector/: .env.example  LICENSE  README.md  pyproject.toml
text-file-collector/src/text_file_collector/: __init__.py  cli.py  collector.py  composition.py  config.py  exceptions.py  logging_config.py
text-file-collector/src/text_file_collector/core/: __init__.py  entities.py  exceptions.py  service.py
text-file-collector/src/text_file_collector/implementations/: __init__.py  binary_detection.py  file_discovery.py  formatting.py  text_reading.py  writing.py
text-file-collector/src/text_file_collector/interfaces/: __init__.py  strategies.py
text-file-collector/tests/: test_cli.py  test_collector.py  test_service.py
