[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "text-file-collector"
version = "0.1.0"
description = "A CLI utility that recursively collects non-binary text files into one combined text file."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ilmars Viksne" }
]
keywords = ["cli", "text", "files", "collector", "utility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0"
]

[project.scripts]
text-file-collector = "text_file_collector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/text_file_collector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/text_file_collector"]

[tool.coverage.report]
show_missing = true
